turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:24: error: not found: value LENGTH
		val l=rule;LENGTH
                           ^LangtonsAnt:25: error: not found: value i
		if (i != l-1) {setCouleurSol(colors(i+1))}
                    ^LangtonsAnt:25: error: not found: value i
		if (i != l-1) {setCouleurSol(colors(i+1))}
                                                    ^